# UKrigingTI

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  compileRun.sh
Debug/: makefile
Debug/src/: GPUKriging.d  KrigingSolver.d  main.d  subdir.mk
data/DS-NonStationary/: Reference  TI1  TI2  TI3  TI4  TI5  hardData100  hardData200  hardData25  hardData50
data/GaussianExample/: TI1  TI2  TI3  TI4  TI5  hardData100  hardData150  hardData200  hardData25  hardData50
data/Non-stationary/: Reference  TI1  TI2  TI3  TI4  TI5  hardData200  hardData25  hardData50
data/WLake/: TI3  TI4  TI5  TILarge  WalkerLake  hardData100  hardData200  hardData25  hardData50  nDEM
data/WLakeRaw/: TI1  TI2  TI3  TI4  TI5  WalkerLakeRaw  hardData100  hardData200  hardData25  hardData50
matlab/: displayRealizations.m.orig  hardData25  loadObjects.m  loadReadFiles.m  runTest.m.orig  sampleHardData.m
python/: runKrigingNonStationary.py  runKrigingWalkerLake.py  runKrigingWalkerLakeAll5.py  runKrigingWalkerLakeRaw.py  runKrigingWalkerLakeRawAll5.py  runMPSKriging2.py  trial5.xml
rgeostats/: cubic.s
rgeostats/NoTrend/: Stationary  stationary_2im.s  stationary_estimated_vario.s  stationary_true_vario.s
rgeostats/SimpleTrend/: trend_estim.s  trend_estim2.s  trend_estim2im.s  trend_estim_gls_vario.s
rgeostats/WalkerLake/: UK_WL.s
scripts/bash/: ParallelSubmitSlurm
scripts/matlab/: performOLS.m  (+5 more)
src/: GPUKriging.cu  GPUKriging.cu.orig  GPUKriging.h  GPUKriging.h.orig  KrigingSolver.cpp  KrigingSolver.cpp.orig  KrigingSolver.cu  KrigingSolver.h  cutil_math.h  main.cpp
(+50 files in other folders)
